tests/neg/parser-stability-23.scala
object i0 {
  import Ordering.{ implicitly => } (true: Boolean) match { case _: i1 => true } // error // error // error
}
